plugins {
    id 'java'
    id 'eclipse' // optional (to generate Eclipse project files)
    id 'idea' // optional (to generate IntelliJ IDEA project files)
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'
version = '0.1'

repositories {
    mavenCentral()
}

dependencies {
    testCompile('org.junit.jupiter:junit-jupiter-api:5.3.1')
    testCompile('org.junit.jupiter:junit-jupiter-params:5.3.1')
    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.1')
    testCompile ('io.rest-assured:rest-assured:3.1.1')
}

test {
    
//    https://docs.gradle.org/current/dsl/org.gradle.api.tasks.testing.Test.html
    
    dependsOn(clean)
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    
    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=256m'
}

wrapper {
    gradleVersion = '4.8'
}